--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Dinks Blog
 description: My thoughts on life, tech, and people.
-url: https://dinks.pages.dev/
+url: https://dinks-blog.pages.dev/
 cover: /media/kari-shea-1SAnrIxw5OY-unsplash.jpeg
